--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- container + row + col -->
+    <section class="container">
+        <div class="row"> 
+            <!-- breakpoint 12 columnas -->
+            <div class="col-lg-6 col-md-8 col-sm-12">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque deserunt rem accusamus placeat voluptas! Repellendus facere ducimus quos, dignissimos a commodi consequatur, ex ipsam atque debitis vero, minima itaque eum.</p>
+            </div>
+            <div class="col-lg-3 col-md-2 col-sm-12">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque deserunt rem accusamus placeat voluptas! Repellendus facere ducimus quos, dignissimos a commodi consequatur, ex ipsam atque debitis vero, minima itaque eum.</p>
+            </div>
+            <div class="col-lg-3 col-md-2 col-sm-12">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque deserunt rem accusamus placeat voluptas! Repellendus facere ducimus quos, dignissimos a commodi consequatur, ex ipsam atque debitis vero, minima itaque eum.</p>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
